Bug 158586 - FILEOPEN RTF: missing page break
Summary: FILEOPEN RTF: missing page break
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.4.1 release
Hardware: All All
: medium normal
Assignee: Michael Stahl
URL:
Whiteboard: target:24.8.0 target:24.2.0.0.beta2 t...
Keywords: bibisected, bisected, filter:rtf, regression
: 152885 (view as bug list)
Depends on:
Blocks: RTF-Paragraph
  Show dependency treegraph
 
Reported: 2023-12-07 19:30 UTC by Justin L
Modified: 2024-12-19 04:42 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
A011-min-cleanedNeedPar.rtf: seems fixed by my patches - worth keeping an eye on (214 bytes, application/rtf)
2023-12-16 22:53 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2023-12-07 19:30:59 UTC
A backport to LO 7.6.4 caused an RTF file to lose its first page break.

Steps to reproduce.
-open attachment 191090 [details] (A011-min-cleaned.rtf)
-it should be two pages long - with the first page being empty.
Comment 1 Justin L 2023-12-07 19:35:04 UTC Comment hidden (obsolete)
Comment 2 Justin L 2023-12-08 13:15:41 UTC Comment hidden (obsolete)
Comment 3 Justin L 2023-12-08 16:44:53 UTC Comment hidden (no-value)
Comment 4 Gabor Kelemen (Collabora) 2023-12-09 10:14:13 UTC
Indeed, the document should be 2 pages, but now it's only one.
Comment 5 Justin L 2023-12-12 20:26:12 UTC Comment hidden (obsolete)
Comment 6 Justin L 2023-12-12 23:57:47 UTC Comment hidden (obsolete)
Comment 7 Justin L 2023-12-13 17:51:45 UTC
My fix works at the point of regression, but it breaks again later in 7.6.4.
commit 15b886f460919ea3dce425a621dc017c2992a96b
Author: Michael Stahl on Fri Nov 10 17:04:27 2023 +0100
    tdf#153194 writerfilter: RTF import: \spltpgpar
Comment 8 Justin L 2023-12-16 22:53:10 UTC Comment hidden (obsolete)
Comment 9 Commit Notification 2023-12-19 07:56:16 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/798649ec30b536614048aa457fb9c8d4dce30b31

tdf#158583 tdf#158586 RTF writerfilter: only startRun for real frame

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-12-19 08:05:24 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e915d9f6973c742a1d810c460d895a93522d3308

related tdf#158586 RTF writerfilter: HAnchor's default is text, not margin

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-12-19 08:09:27 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/016f779ee6c7f601be3ae19dc57497e63a5bf817

tdf#158586 RTF writerfilter: substitute hasProperties for inFrame

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-12-19 11:53:14 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/465cc1bbbe86b2affc112c6be79c7c0e9ea885e6

tdf#158583 tdf#158586 RTF writerfilter: only startRun for real frame

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2023-12-19 15:32:02 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/b5758c9e69e8c4c7a0f638345b21b876bd503ac3

related tdf#158586 RTF writerfilter: HAnchor's default is text, not margin

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2023-12-19 15:55:06 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/7abb319821e641599f92e5f4ad2d7c0e377851fa

tdf#158586 RTF writerfilter: substitute hasProperties for inFrame

It will be available in 24.2.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 Commit Notification 2023-12-19 17:58:25 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ee4a371e7cd6029978260b7692fe5b5db00dce8b

tdf#158583 tdf#158586 RTF writerfilter: only startRun for real frame

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 16 Justin L 2023-12-20 14:35:58 UTC
This bug is NOT YET FIXED. I have a work-in-progress patch, but it might not be the best. https://gerrit.libreoffice.org/c/core/+/160745
Comment 17 Commit Notification 2024-01-31 17:35:40 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/57abad5cf990111fd7de011809d4421dc0550193

tdf#158586 writerfilter: RTF import: fix \page \sect \skbnone

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 18 Commit Notification 2024-01-31 17:35:42 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/dbe78489e98d565b72a703524308523135ffdd67

tdf#158586 writerfilter: RTF import: handle \sect in frame as \par

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2024-01-31 17:59:47 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/17e2c7226a73675d69febf0915aaeae61ad8e9f1

tdf#158586 writerfilter: RTF import: fix \page \sect \skbnone w/ header

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 20 Michael Stahl 2024-01-31 18:05:48 UTC
fixed on master

thanks Justin for finding these issues and the frame related fixes
Comment 21 Commit Notification 2024-02-01 11:43:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/e63a75e00dcd797b0bd061add3c72dcb7b353007

tdf#158586 writerfilter: RTF import: fix \page \sect \skbnone

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 22 Commit Notification 2024-02-01 11:44:01 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/0d66c56d48476efdf8d9d9d9549f59cdad5cb25d

tdf#158586 writerfilter: RTF import: handle \sect in frame as \par

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 23 Commit Notification 2024-02-01 11:44:03 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/ae3f45e39b59583a60a751dcb54889f1ee28197b

tdf#158586 writerfilter: RTF import: fix \page \sect \skbnone w/ header

It will be available in 7.6.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 24 Commit Notification 2024-02-06 19:33:58 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6dde3695c27b28165b5aa27de5a6e309b860e02f

tdf#158586 writerfilter: RTF import: fix \page \sect \skbnone

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 25 Commit Notification 2024-02-06 19:34:00 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/d5e2e66f8eb7cb89863ee0096f0569d2358fa1b7

tdf#158586 writerfilter: RTF import: handle \sect in frame as \par

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 26 Commit Notification 2024-02-06 19:34:03 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/0a53b7f64dddc31b705080bb21230aae99212062

tdf#158586 writerfilter: RTF import: fix \page \sect \skbnone w/ header

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 27 Commit Notification 2024-02-08 12:01:16 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6446d3e12440be39e6b55f8749038061a1b240da

tdf#158586 writerfilter: RTF import: fix assert on ooo113308-1.rtf

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 28 Commit Notification 2024-02-09 13:54:09 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/e85453e5319d5072a49ba6749fabdc804eaf64e8

tdf#158586 writerfilter: RTF import: fix assert on ooo113308-1.rtf

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 29 Commit Notification 2024-02-09 14:55:23 UTC
Michael Stahl committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/59aca5a45b1bd5a3f9261ae12b9723ef89edde58

tdf#158586 writerfilter: RTF import: fix assert on ooo113308-1.rtf

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 30 Commit Notification 2024-02-12 15:00:13 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/188caca7dec0251597bd2ea40448de752b3fd1a1

tdf#158586 RTF writerfilter: substitute hasProperties for inFrame

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 31 Michael Stahl 2024-02-15 13:51:03 UTC
*** Bug 152885 has been marked as a duplicate of this bug. ***