related tdf#158586 RTF writerfilter: HAnchor's default is text, not margin

\phcol: Use the column as the horizontal reference frame.
This is the default if no horizontal reference frame is given.

Change-Id: I8ef4a35c578768810edc0a68e3fd3b227c069dfe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160776
Reviewed-by: Justin Luth <jluth@mail.com>
Tested-by: Jenkins
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/160983